:lipstick: fix horizontal scrollbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -482,7 +482,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .btn-blue {
   border-radius: 9999px;
-  border-width: 2px;
+  border-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(56 182 255 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
@@ -565,22 +565,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .m-2 {
   margin: 0.5rem;
 }
+.m-4 {
+  margin: 1rem;
+}
 .m-36 {
   margin: 9rem;
 }
 .m-0 {
   margin: 0px;
 }
-.m-4 {
-  margin: 1rem;
-}
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 .my-3 {
   margin-top: 0.75rem;
@@ -606,6 +602,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 4rem;
   margin-right: 4rem;
 }
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.my-60 {
+  margin-top: 15rem;
+  margin-bottom: 15rem;
+}
 .mx-14 {
   margin-left: 3.5rem;
   margin-right: 3.5rem;
@@ -625,10 +629,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
-}
-.my-60 {
-  margin-top: 15rem;
-  margin-bottom: 15rem;
 }
 .mx-32 {
   margin-left: 8rem;
@@ -786,9 +786,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-3\/4 {
   width: 75%;
 }
-.w-2xl {
-  width: 50rem;
-}
 .w-24 {
   width: 6rem;
 }
@@ -797,6 +794,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-base {
   width: 25rem;
+}
+.w-1\/2 {
+  width: 50%;
 }
 .max-w-sm {
   max-width: 24rem;
@@ -850,6 +850,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .justify-self-end {
   justify-self: end;
 }
+.overflow-hidden {
+  overflow: hidden;
+}
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -900,17 +903,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1;
   border-color: rgb(63 63 70 / var(--tw-border-opacity));
 }
-.bg-primary {
+.bg-white-cream {
   --tw-bg-opacity: 1;
-  background-color: rgb(56 182 255 / var(--tw-bg-opacity));
+  background-color: rgb(254 248 242 / var(--tw-bg-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-white-cream {
+.bg-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 248 242 / var(--tw-bg-opacity));
+  background-color: rgb(56 182 255 / var(--tw-bg-opacity));
 }
 .bg-light-blue {
   --tw-bg-opacity: 1;
@@ -919,10 +922,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-gray {
   --tw-bg-opacity: 1;
   background-color: rgb(112 112 112 / var(--tw-bg-opacity));
-}
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-inherit {
   background-color: inherit;
@@ -950,13 +949,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-20 {
   padding: 5rem;
 }
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -1648,6 +1651,11 @@ input:checked + .slider-2:before {
     margin: 5rem;
   }
 
+  .xl\:my-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
   .xl\:my-3 {
     margin-top: 0.75rem;
     margin-bottom: 0.75rem;
@@ -1658,11 +1666,6 @@ input:checked + .slider-2:before {
     margin-bottom: 3.5rem;
   }
 
-  .xl\:mx-10 {
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-  }
-
   .xl\:mx-8 {
     margin-left: 2rem;
     margin-right: 2rem;
@@ -1671,6 +1674,11 @@ input:checked + .slider-2:before {
   .xl\:mx-64 {
     margin-left: 16rem;
     margin-right: 16rem;
+  }
+
+  .xl\:mx-10 {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
   }
 
   .xl\:mx-20 {
@@ -1768,16 +1776,16 @@ input:checked + .slider-2:before {
     width: 50%;
   }
 
+  .xl\:w-2xl {
+    width: 50rem;
+  }
+
   .xl\:w-base {
     width: 25rem;
   }
 
   .xl\:w-1\/3 {
     width: 33%;
-  }
-
-  .xl\:w-2xl {
-    width: 50rem;
   }
 
   .xl\:max-w-2xl {
@@ -1847,6 +1855,11 @@ input:checked + .slider-2:before {
   .xl\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
+  }
+
+  .xl\:py-36 {
+    padding-top: 9rem;
+    padding-bottom: 9rem;
   }
 
   .xl\:px-64 {
